welcome.lessons.welcome.array.maxvalue.MaxValue.scala.error
maxValue:4: error: illegal start of simple expression
		if (nums(i)>x)) {
                              ^